--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-    <link rel="" type="" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <a href="#">
+                <img src="https://script.i-parcel.com/images/flags/48/us.png" alt="">
+            </a>
+        </div>
+        <div class="brand-popup">
+            <a href="#" class="popup-close">&times;</a>
+            <h3>Welcome! It appears to us you are shopping from United States. We have conveniently set your currency to United States Dollars.</h3>
+            <div class="medios-pago">
+                <img src="https://script.i-parcel.com/images/creditcards/visa.png" alt="">
+                <img src="https://script.i-parcel.com/images/creditcards/amex.png" alt="">
+                <img src="https://script.i-parcel.com/images/creditcards/mastercard.png" alt="">
+                <img src="https://script.i-parcel.com/images/creditcards/paypal.png" alt="">
+            </div>
+        </div>
+    </header>
 
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
     <script src="js/app.js"></script>
